project(dbscan)
cmake_minimum_required(VERSION 3.5)

MESSAGE(STATUS "This is CMAKE_CURRENT_SOURCE_DIR" ${CMAKE_CURRENT_SOURCE_DIR})


find_package( Eigen3 REQUIRED ) 
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

SET(LIBDBSCAN_SRC dbscan.cpp)
ADD_LIBRARY(dbscan SHARED ${LIBDBSCAN_SRC})
SET_TARGET_PROPERTIES(dbscan PROPERTIES VERSION 1.2 SOVERSION 1)
SET_TARGET_PROPERTIES(dbscan PROPERTIES OUTPUT_NAME "dbscan")
SET_TARGET_PROPERTIES(dbscan PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET(LIBPOLYFIT_SRC polyfit.cpp)
ADD_LIBRARY(polyfit SHARED ${LIBPOLYFIT_SRC})
SET_TARGET_PROPERTIES(polyfit PROPERTIES VERSION 1.2 SOVERSION 1)
SET_TARGET_PROPERTIES(polyfit PROPERTIES OUTPUT_NAME "polyfit")
SET_TARGET_PROPERTIES(polyfit PROPERTIES CLEAN_DIRECT_OUTPUT 1)

